--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Curso Ingreso UTN FRA</title>
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-		<!--Estilos-->
+
+		<!--/estilos-->
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link rel="stylesheet" type="text/css" href="animacion.css">
-		<!--final de Estilos-->
+		<!--final de /estilos-->
+
+		<!--Lógica-Programación-->
+		<!-- <script type="text/javascript" src="jsEntradaSalida-1.js"></script> -->
+        <!--Final de Lógica-Programación -->
 
 
 	</head>
 	<body>
+		<div class="CajaArriva animated bounceInUp">
+			<a  class="MiBotonUTNLinea" onclick="location.href='../index.html'" >Men&uacute; Principal</a>
+		</div>
 		<div class="CajaInicio animated bounceInRight">
-			<h1>UTN FRA</h1>
+			<h1>Ejercitaci&oacute;n: </br> Parcial</h1>
 			<form id="FormIngreso">
+					<img src="proceso.png" style=" width: 546px; float: right;">
 
-					<img src="inicio.png" style="width: 500px;float: right;">
-
-
-				<a  class="MiBotonUTNMenuInicioParcial" onclick="location.href='1-EntradaSalida/index.html'" >E/S de datos</a>
-				<a  class="MiBotonUTNMenuInicioParcial" onclick="location.href='2-InstruccionIf/index.html'" >Instrucci&oacute;n 'if'</a>
-				<a  class="MiBotonUTNMenuInicioParcial" onclick="location.href='3-InstruccionSwitch/index.html'" >Instrucci&oacute;n 'Switch'</a>
-				<a  class="MiBotonUTNMenuInicio" onclick="location.href='4-Tiempo/index.html'" >Manejar el tiempo</a>
-				<a  class="MiBotonUTNMenuInicioParcial" onclick="location.href='5-InstruccionWhile/index.html'" >Iteraciones 'WHILE'</a>
-				<a  class="MiBotonUTNMenuInicio" onclick="location.href='6-InstruccionFor/index.html'" >Iteraciones 'FOR'</a>
-				<a  class="MiBotonUTNMenuInicio" onclick="location.href='7-Vectores/index.html'" >Vectores</a>
-				<a  class="MiBotonUTNMenuInicio" onclick="location.href='8-TPs/index.html'" >TPs</a>				
-				<a  class="MiBotonUTNMenuInicio" target="_blank" href='Guia de TPs curso de ingreso.pdf' >PDF Tps </a>
-				<a  class="MiBotonUTNMenuInicio" target="_blank" href='http://www.w3schools.com/js/default.asp' >W3School</a>
-				<a  class="MiBotonUTNMenuInicioParcial" onclick="location.href='9-Parciales/index.html'" >Parciales</a>
-
+					<a  class="MiBotonUTNMenu" onclick="location.href='uno.html'" >Ejercicio 1 <br>(0.5 pts)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='dos.html'" >Ejercicio 2 <br>(0.5 pts)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='tres.html'" >Ejercicio 3 <br>(0.5 pts)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='cuatro.html'" >Ejercicio 4 <br>(0.5 pts)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='cinco.html'" >Ejercicio 5 <br>(1 pt)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='seis.html'" >Ejercicio 6 <br>(1 pt)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='siete.html'" >Ejercicio 7  <br>(2 pts)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='ocho.html'" >Ejercicio 8 <br>(2 pts)</a>
+					<a  class="MiBotonUTNMenu" onclick="location.href='nueve.html'" >Ejercicio 9 <br>(2 pts)</a>
+					<!--a  class="MiBotonUTNMenu" href='' target="_blank">PDF</a-->
+					
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
 
 			</form>
-<a  class="MiBotonUTNMenuInicioParcial"  style="width:600px;">*Necesarios para el parcial, botones de  color ROJO/VERDE </a>
 
 
 		</div>
